style: fix iphone visibility bug

--- a/src/components/collection/Collection.module.scss
+++ b/src/components/collection/Collection.module.scss
@@ -4,14 +4,6 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 45px;
-  .title {
-    color: #000;
-    font-family: Comfortaa;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
   .sub_title {
     margin: 20px 0 35px;
     color: #000;
