--- a/src/components/popular/Popular.module.scss
+++ b/src/components/popular/Popular.module.scss
@@ -2,15 +2,6 @@
   position: relative;
   margin: 30px auto 50px;
   text-align: center;
-  .popular_title {
-    padding-bottom: 50px;
-    color: #000;
-    font-family: Comfortaa;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
 
   .popular_button {
     padding: 10px 40px;
