--- a/src/pages/card-item/CardItem.module.scss
+++ b/src/pages/card-item/CardItem.module.scss
@@ -165,7 +165,7 @@
   // height: 100dvh;
   background-color: #3f3f3f;
   opacity: 0.6;
-  height: 100vh;
+  // height: 100vh;
   overflow-y: hidden;
 }
 .mesh_image {
