--- a/src/pages/modals/demoErr/DemoErr.module.scss
+++ b/src/pages/modals/demoErr/DemoErr.module.scss
@@ -9,7 +9,7 @@
   // height: 100dvh;
   background-color: #3f3f3f;
   opacity: 0.6;
-  height: 100vh;
+  // height: 100vh;
   overflow-y: hidden;
 }
 .block {
@@ -28,6 +28,10 @@
   background-color: #fff;
   border-radius: 25px;
   margin: auto;
+
+  @media (max-width: 500px) {
+    height: 50vh;
+  }
 
   p {
     margin: 25px auto;
